--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "test": "jest",
     "dev": "nodemon index.js"
+    
   },
   "keywords": [],
   "author": "",
